--- a/resources/sass/bg.scss
+++ b/resources/sass/bg.scss
@@ -1,39 +1,48 @@
-.grey{
-    color: grey;
+.grey {
+    color: rgba(119, 119, 119, 1);
+    margin-left: 15px;
+    font-style: normal;
+    font-weight: normal;
 }
 
-.title{
+.title {
     color: #FF8B6A;
     font-size: 160%;
-    margin-left: 4%;
+    margin-left: 10px;
 }
 
-.tanggal{
+.tanggal {
     color: #FF8B6A;
-    margin-left: 11.4%;
+    margin-left: 10px;
 }
 
-.univ{
-    margin-left: 4.2%;
+.univ {
+    color: #FF8B6A;
+    font-weight: 500;
 }
 
-.bwah{
+.bwah {
     margin-left: 37.9%;
 }
 
-.master{
+.master {
+    margin-top: -4%;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 1);
+}
+
+.major {
+    font-style: normal;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 1);
     margin-top: -4%;
 }
 
-.major{
+.gpa {
     margin-top: -4%;
 }
 
-.gpa{
-    margin-top: -4%;
-}
-
-.konten{
-    margin-left: 7%;
-    margin-top: 4%;
-}
+// .konten{
+//     margin-left: 7%;
+//     margin-top: 4%;
+// }
