--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,7 +1,5 @@
 .bg {
   background-color: #ffe0d8 !important;
-  box-sizing: border-box;
-  padding-bottom: 30px;
 }
 
 .teks {
@@ -16,7 +14,7 @@
 
 .profil {
   margin-top: 10%;
-  margin-left: 20%;
+  margin-left: 27%;
 }
 
 .tengah {
@@ -26,7 +24,7 @@
 .white {
   border: 1px solid #667E90 !important;
   background-color: white !important;
-  margin-left: 15% !important;
+  margin-left: 24% !important;
   margin-top: -5%;
   color: black !important;
   margin-bottom: 10%;
@@ -35,7 +33,7 @@
 .white:hover {
   border: 1px solid #667E90 !important;
   background-color: #667E90 !important;
-  margin-left: 15% !important;
+  margin-left: 24% !important;
   margin-top: -5%;
   color: white !important;
 }
@@ -43,6 +41,7 @@
 #drpdwn {
   border-radius: 20px;
   background-color: #439100 !important;
+  margin-left: 82%;
   margin-top: 3%;
 }
 
@@ -79,6 +78,13 @@
 .contact .value {
   width: 65%;
   float: right;
+}
+
+.hobbybox {
+  border: 1px solid #FF8B6A !important;
+  border-radius: 10px;
+  height: 30%;
+  width: 50%;
 }
 
 .aboutme {
@@ -219,617 +225,11 @@
 }
 
 .hobbybox {
-  border: 1px solid #FF8B6A !important;
-  border-radius: 10px;
+  padding: 40px;
   width: 80%;
   float: left;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 40px;
-  box-sizing: border-box;
-  padding-right: 20px;
   margin-left: 3%;
   margin-top: 3%;
-  height: unset !important;
-}
-
-.hobbybox .title {
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.hobbybox .title span {
-  font-family: Roboto Regular;
-  color: #FF8B6A;
-}
-
-.hobbybox .numeric {
-  box-sizing: border-box;
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-}
-
-.hobbybox .numeric span.num {
-  color: #525252;
-  width: 20%;
-}
-
-.hobbybox .numeric .range-slider {
-  width: 65%;
-  box-sizing: border-box;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range {
-  -webkit-appearance: none;
-  width: calc(100% - (73px));
-  height: 10px;
-  border-radius: 5px;
-  background: #525252;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range::-webkit-slider-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range:active::-webkit-slider-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -moz-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range::-moz-range-thumb:hover {
-  background: #1abc9c;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range:active::-moz-range-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .numeric .range-slider .range-slider__range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #6CDD0B;
-}
-
-.hobbybox .numeric .range-slider .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #6CDD0B;
-  padding: 5px 10px;
-  margin-left: 8px;
-}
-
-.hobbybox .numeric .range-slider .range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #6CDD0B;
-  border-bottom: 7px solid transparent;
-  content: "";
-}
-
-.hobbybox .numeric .range-slider .range-slider__value::-moz-range-track {
-  background: #d7dcdf;
-  border: 0;
-}
-
-.hobbybox .numeric .range-slider input::-moz-focus-inner,
-.hobbybox .numeric .range-slider input::-moz-focus-outer {
-  border: 0;
-}
-
-.hobbybox .numeric span.nilai {
-  font-weight: Bold;
-  font-size: 18px;
-  background-color: #66DD00;
-  padding: 2px 13px;
-  color: #ffffff;
-  border-radius: 14px;
-  margin-left: 40px;
-}
-
-.hobbybox .basic {
-  box-sizing: border-box;
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-}
-
-.hobbybox .basic span.eng {
-  color: #525252;
-  width: 20%;
-}
-
-.hobbybox .basic .range-slider {
-  width: 65%;
-  box-sizing: border-box;
-}
-
-.hobbybox .basic .range-slider .range-slider__range {
-  -webkit-appearance: none;
-  width: calc(100% - (73px));
-  height: 10px;
-  border-radius: 5px;
-  background: #525252;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hobbybox .basic .range-slider .range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #4B9EF0;
-  cursor: pointer;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .basic .range-slider .range-slider__range::-webkit-slider-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .basic .range-slider .range-slider__range:active::-webkit-slider-thumb {
-  background: #4B9EF0;
-}
-
-.hobbybox .basic .range-slider .range-slider__range::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #4B9EF0;
-  cursor: pointer;
-  -moz-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .basic .range-slider .range-slider__range::-moz-range-thumb:hover {
-  background: #4B9EF0;
-}
-
-.hobbybox .basic .range-slider .range-slider__range:active::-moz-range-thumb {
-  background: #4B9EF0;
-}
-
-.hobbybox .basic .range-slider .range-slider__range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #4B9EF0;
-}
-
-.hobbybox .basic .range-slider .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #4B9EF0;
-  padding: 5px 10px;
-  margin-left: 8px;
-}
-
-.hobbybox .basic .range-slider .range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #4B9EF0;
-  border-bottom: 7px solid transparent;
-  content: "";
-}
-
-.hobbybox .basic .range-slider .range-slider__value::-moz-range-track {
-  background: #d7dcdf;
-  border: 0;
-}
-
-.hobbybox .basic .range-slider input::-moz-focus-inner,
-.hobbybox .basic .range-slider input::-moz-focus-outer {
-  border: 0;
-}
-
-.hobbybox .basic span.nilai {
-  font-weight: Bold;
-  font-size: 18px;
-  background-color: #4B9EF0;
-  padding: 2px 13px;
-  color: #ffffff;
-  border-radius: 14px;
-  margin-left: 40px;
-}
-
-.hobbybox .algorithm {
-  box-sizing: border-box;
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-}
-
-.hobbybox .algorithm span.algo {
-  color: #525252;
-  width: 20%;
-}
-
-.hobbybox .algorithm .range-slider {
-  width: 65%;
-  box-sizing: border-box;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range {
-  -webkit-appearance: none;
-  width: calc(100% - (73px));
-  height: 10px;
-  border-radius: 5px;
-  background: #525252;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range::-webkit-slider-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range:active::-webkit-slider-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -moz-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range::-moz-range-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range:active::-moz-range-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #6CDD0B;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #6CDD0B;
-  padding: 5px 10px;
-  margin-left: 8px;
-}
-
-.hobbybox .algorithm .range-slider .range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #6CDD0B;
-  border-bottom: 7px solid transparent;
-  content: "";
-}
-
-.hobbybox .algorithm .range-slider .range-slider__value::-moz-range-track {
-  background: #6CDD0B;
-  border: 0;
-}
-
-.hobbybox .algorithm .range-slider input::-moz-focus-inner,
-.hobbybox .algorithm .range-slider input::-moz-focus-outer {
-  border: 0;
-}
-
-.hobbybox .algorithm span.nilai {
-  font-weight: Bold;
-  font-size: 18px;
-  background-color: #6CDD0B;
-  padding: 2px 13px;
-  color: #ffffff;
-  border-radius: 14px;
-  margin-left: 40px;
-}
-
-.hobbybox .statistics {
-  box-sizing: border-box;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 100%;
-  display: flex;
-}
-
-.hobbybox .statistics span.stati {
-  color: #525252;
-  width: 20%;
-}
-
-.hobbybox .statistics .range-slider {
-  width: 65%;
-  box-sizing: border-box;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range {
-  -webkit-appearance: none;
-  width: calc(100% - (73px));
-  height: 10px;
-  border-radius: 5px;
-  background: #525252;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #A5A5A5;
-  cursor: pointer;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range::-webkit-slider-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range:active::-webkit-slider-thumb {
-  background: #A5A5A5;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #A5A5A5;
-  cursor: pointer;
-  -moz-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range::-moz-range-thumb:hover {
-  background: #A5A5A5;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range:active::-moz-range-thumb {
-  background: #A5A5A5;
-}
-
-.hobbybox .statistics .range-slider .range-slider__range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #A5A5A5;
-}
-
-.hobbybox .statistics .range-slider .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #A5A5A5;
-  padding: 5px 10px;
-  margin-left: 8px;
-}
-
-.hobbybox .statistics .range-slider .range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #A5A5A5;
-  border-bottom: 7px solid transparent;
-  content: "";
-}
-
-.hobbybox .statistics .range-slider .range-slider__value::-moz-range-track {
-  background: #d7dcdf;
-  border: 0;
-}
-
-.hobbybox .statistics .range-slider input::-moz-focus-inner,
-.hobbybox .statistics .range-slider input::-moz-focus-outer {
-  border: 0;
-}
-
-.hobbybox .statistics span.nilai {
-  font-weight: Bold;
-  font-size: 18px;
-  background-color: #A5A5A5;
-  padding: 2px 13px;
-  color: #ffffff;
-  border-radius: 14px;
-  margin-left: 40px;
-}
-
-.hobbybox hr {
-  background: rgba(0, 0, 0, 0.8);
-  height: 2px;
-  border-radius: 3px;
-  width: 100%;
-  margin-top: 0rem;
-  margin-bottom: 3px;
-}
-
-.hobbybox .average {
-  box-sizing: border-box;
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-}
-
-.hobbybox .average span.ave {
-  color: #525252;
-  width: 20%;
-}
-
-.hobbybox .average .range-slider {
-  width: 65%;
-  box-sizing: border-box;
-}
-
-.hobbybox .average .range-slider .range-slider__range {
-  -webkit-appearance: none;
-  width: calc(100% - (73px));
-  height: 10px;
-  border-radius: 5px;
-  background: #525252;
-  outline: none;
-  padding: 0;
-  margin: 0;
-}
-
-.hobbybox .average .range-slider .range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .average .range-slider .range-slider__range::-webkit-slider-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .average .range-slider .range-slider__range:active::-webkit-slider-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .average .range-slider .range-slider__range::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #6CDD0B;
-  cursor: pointer;
-  -moz-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hobbybox .average .range-slider .range-slider__range::-moz-range-thumb:hover {
-  background: #ffffff;
-}
-
-.hobbybox .average .range-slider .range-slider__range:active::-moz-range-thumb {
-  background: #6CDD0B;
-}
-
-.hobbybox .average .range-slider .range-slider__range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #6CDD0B;
-}
-
-.hobbybox .average .range-slider .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #6CDD0B;
-  padding: 5px 10px;
-  margin-left: 8px;
-}
-
-.hobbybox .average .range-slider .range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #6CDD0B;
-  border-bottom: 7px solid transparent;
-  content: "";
-}
-
-.hobbybox .average .range-slider .range-slider__value::-moz-range-track {
-  background: #6CDD0B;
-  border: 0;
-}
-
-.hobbybox .average .range-slider input::-moz-focus-inner,
-.hobbybox .average .range-slider input::-moz-focus-outer {
-  border: 0;
-}
-
-.hobbybox .average span.nilai {
-  font-weight: Bold;
-  font-size: 18px;
-  background-color: #6CDD0B;
-  padding: 2px 13px;
-  color: #ffffff;
-  border-radius: 14px;
-  margin-left: 40px;
+  height: 80%;
 }
 
