--- a/public/css/talentsearch.css
+++ b/public/css/talentsearch.css
@@ -11,15 +11,11 @@
 
 .card {
   margin: 0 auto;
-  padding: 50px;
+  padding: 30px;
   width: 800px;
   margin-top: 30px;
   border-radius: 1.25em !important;
   border: 0.1px solid #FF8B6A !important;
-}
-
-.text-center {
-  margin-left: 10px;
 }
 
 #teks {
@@ -62,16 +58,21 @@
   margin-top: -15px;
 }
 
+p {
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+}
+
 #btn {
   border-radius: 13px;
-  margin-left: -40px;
-  margin-right: 5px;
+  font-size: 12px;
 }
 
 #btn1 {
-  border-radius: 13px;
-  margin-top: 2px;
-  margin-bottom: 5px;
+  font-size: 13px;
+  border-radius: 12px;
   background-color: #439100;
 }
 
