--- a/resources/sass/talentsearch.scss
+++ b/resources/sass/talentsearch.scss
@@ -1,133 +1,132 @@
- .search{
+ .search {
      margin-left: 15%;
      margin-top: 20px;
  }
-
- .form-bg{
+ 
+ .form-bg {
      border: 15px solid #FCFCFC;
      border-radius: 15px;
      box-shadow: 1px 8px 10px beige;
  }
-
- .card{
+ 
+ .card {
      margin: 0 auto;
-     padding: 50px;
+     padding: 30px;
      width: 800px;
      margin-top: 30px;
      border-radius: 1.25em !important;
      border: 0.1px solid #FF8B6A !important;
  }
-
- .text-center{
-     margin-left: 10px;
- }
-
- #teks{
+ 
+ #teks {
      margin-left: 0px;
      color: #929292;
  }
-
- .profil{
+ 
+ .profil {
      margin-left: -13px;
  }
-
- .kiri{
+ 
+ .kiri {
      margin-left: 20px;
      float: left;
  }
-
- .teks{
+ 
+ .teks {
      float: left;
      margin-top: 9px;
      margin-left: 5px;
      color: #F28C71;
  }
-
- .teks1{
-    float: left;
-    margin-top: 9px;
-    margin-left: 11px;
-    color: #F28C71;
-}
-
- .kanan{
+ 
+ .teks1 {
+     float: left;
+     margin-top: 9px;
+     margin-left: 11px;
+     color: #F28C71;
+ }
+ 
+ .kanan {
      margin-left: 70px;
      margin-top: -10px;
      float: left;
  }
-
- .lamakerja{
+ 
+ .lamakerja {
      margin-left: 70px;
      float: left;
      margin-top: -15px;
  }
-
- #btn{
-     border-radius: 13px;
-     margin-left: -40px;
-     margin-right: 5px;
+ 
+ p {
+     margin-block-start: 0;
+     margin-block-end: 0;
  }
-
- #btn1{
-    border-radius: 13px;
-    margin-top: 2px;
-    margin-bottom: 5px;
-    background-color: #439100;
-}
-
-#alamat{
-    position: relative;
-    margin-left: -25px;
-}
-
-#imglocation{
-    float: right;
-    margin-top: -40px;
-}
-
-#gaji{
-    margin-top: -15px;
-    margin-left: -25px;
-}
-
-#imgsalary{
-    float: right;
-    margin-top: -40px;
-}
-
-.modal-content{
-    padding-top: 20px;
-    margin-top: 200px;
-}
-
-.modal-footer{
-    margin: 0 auto;
-    border-top: none !important;
-}
-
-.modal-footer button{
-    border-radius: 20px;
-    height: 36px;
-    width: 100px;
-}
-
-.modal-footer #pi{
-    background-color: #FF8B6A;
-    color: white;
-}
-
-.modal-body input{
-    width: 95%;
-    margin-top: -15px;
-    margin-bottom: -10px;
-    border-radius: 15px;
-}
-
-h5 a{
-    color: #000;
-}
-
-h5 a:hover{
-    color: #000;
-    text-decoration: none;
-}
+ 
+ #btn {
+     border-radius: 13px;
+     font-size: 12px;
+ }
+ 
+ #btn1 {
+     font-size: 13px;
+     border-radius: 12px;
+     background-color: #439100;
+ }
+ 
+ #alamat {
+     position: relative;
+     margin-left: -25px;
+ }
+ 
+ #imglocation {
+     float: right;
+     margin-top: -40px;
+ }
+ 
+ #gaji {
+     margin-top: -15px;
+     margin-left: -25px;
+ }
+ 
+ #imgsalary {
+     float: right;
+     margin-top: -40px;
+ }
+ 
+ .modal-content {
+     padding-top: 20px;
+     margin-top: 200px;
+ }
+ 
+ .modal-footer {
+     margin: 0 auto;
+     border-top: none !important;
+ }
+ 
+ .modal-footer button {
+     border-radius: 20px;
+     height: 36px;
+     width: 100px;
+ }
+ 
+ .modal-footer #pi {
+     background-color: #FF8B6A;
+     color: white;
+ }
+ 
+ .modal-body input {
+     width: 95%;
+     margin-top: -15px;
+     margin-bottom: -10px;
+     border-radius: 15px;
+ }
+ 
+ h5 a {
+     color: #000;
+ }
+ 
+ h5 a:hover {
+     color: #000;
+     text-decoration: none;
+ }
