--- a/public/css/onlinetesting.css
+++ b/public/css/onlinetesting.css
@@ -32,12 +32,13 @@
 
 .card {
   margin-top: 2%;
-  padding: 5%;
   border: 1px solid #FF8B6A !important;
   border-radius: 20px !important;
 }
 
 .nama {
+  color: black;
+  font-family: Roboto Bold;
   margin-left: 0%;
 }
 
@@ -57,5 +58,66 @@
 
 .button {
   margin-top: 8%;
+}
+
+p {
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+}
+
+.set,
+.set2 {
+  background-color: #FFE0D8;
+  border-radius: 14px;
+  padding-top: 10px;
+  padding-bottom: 16px;
+}
+
+.set .tag,
+.set2 .tag {
+  color: black;
+  font-family: Roboto Bold;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.set .miring,
+.set2 .miring {
+  font-style: italic;
+  color: #CE0000;
+  font-family: Roboto Bold;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.set2 {
+  margin-top: 15px;
+}
+
+.btn-set {
+  background-color: #FF8B6A;
+  color: white;
+  font-family: Roboto Regular;
+  font-size: 14px;
+  border: none;
+  border-radius: 14px;
+}
+
+#btn-move {
+  background-color: #439100;
+  font-size: 14px;
+  color: white;
+  font-family: Robot Regular;
+  border: none;
+  width: 100%;
+  border-radius: 14px;
+}
+
+.tgl-desk {
+  font-size: 14px;
+  color: #929292;
+  font-family: Roboto Regular;
 }
 
