--- a/public/css/pro.css
+++ b/public/css/pro.css
@@ -35,9 +35,10 @@ ul {
 
 .ting1 {
   background-color: #FFF9C2;
-  padding-left: 20%;
+  text-align: center;
   border-radius: 5px;
   width: 120%;
+  margin-top: 2%;
 }
 
 .ting2 {
