--- a/public/css/talentsearch.css
+++ b/public/css/talentsearch.css
@@ -115,6 +115,9 @@ p {
 .modal-footer #pi {
   background-color: #FF8B6A;
   color: white;
+  border-radius: 20px;
+  height: 36px;
+  width: 100px;
 }
 
 .modal-body input {
@@ -122,6 +125,14 @@ p {
   margin-top: -15px;
   margin-bottom: -10px;
   border-radius: 15px;
+}
+
+.modal-body .inputfile {
+  width: 100%;
+  float: left;
+  margin-top: 5%;
+  margin-left: 3%;
+  border-radius: 0px;
 }
 
 h5 a {
