--- a/resources/sass/onlinetesting.scss
+++ b/resources/sass/onlinetesting.scss
@@ -1,14 +1,14 @@
-#btn{
+#btn {
     width: 40%;
     float: right;
     margin-top: -16%;
 }
 
-.text-center{
+.text-center {
     color: #FF8B6A;
 }
 
-.br{
+.br {
     margin-bottom: 8% !important;
     margin-top: 1% !important;
     border: 1px solid #b8b8b8d0;
@@ -16,32 +16,33 @@
     margin: 0 auto;
 }
 
-.br1{
+.br1 {
     margin-top: 1% !important;
     border: 1px solid #272727;
     width: 80%;
-    margin-left:-4% ;
+    margin-left: -4%;
 }
 
-.br2{
+.br2 {
     margin-top: 1% !important;
     border: 1px solid #272727;
     width: 80%;
-    margin-left:-4% ;
+    margin-left: -4%;
 }
 
-.card{
+.card {
     margin-top: 2%;
-    padding: 5%;
     border: 1px solid #FF8B6A !important;
     border-radius: 20px !important;
 }
 
-.nama{
+.nama {
+    color: black;
+    font-family: Roboto Bold;
     margin-left: 0%;
 }
 
-.kanan{
+.kanan {
     background-color: #FF8B6A !important;
     border: #FF8B6A !important;
     width: 20%;
@@ -49,13 +50,67 @@
     left: 58%;
 }
 
-.kiri{
+.kiri {
     color: #FF8B6A !important;
     border-color: #FF8B6A !important;
     width: 20%;
-
 }
 
-.button{
-    margin-top: 8%; 
+.button {
+    margin-top: 8%;
+}
+
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.set,
+.set2 {
+    background-color: #FFE0D8;
+    border-radius: 14px;
+    padding-top: 10px;
+    padding-bottom: 16px;
+    .tag {
+        color: black;
+        font-family: Roboto Bold;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .miring {
+        font-style: italic;
+        color: #CE0000;
+        font-family: Roboto Bold;
+        font-size: 14px;
+        font-weight: 400;
+    }
+}
+
+.set2 {
+    margin-top: 15px;
+}
+
+.btn-set {
+    background-color: #FF8B6A;
+    color: white;
+    font-family: Roboto Regular;
+    font-size: 14px;
+    border: none;
+    border-radius: 14px;
+}
+
+#btn-move {
+    background-color: #439100;
+    font-size: 14px;
+    color: white;
+    font-family: Robot Regular;
+    border: none;
+    width: 100%;
+    border-radius: 14px;
+}
+
+.tgl-desk {
+    font-size: 14px;
+    color: #929292;
+    font-family: Roboto Regular;
 }
