perbaikan untuk link nav institution

--- a/resources/sass/app-two.scss
+++ b/resources/sass/app-two.scss
@@ -6,6 +6,10 @@ body {
     font-family: 'Roboto, Nunito Sans', sans-serif;
 }
 
+// nav {
+//     position: fixed;
+//     z-index: 999999;
+// }
 .container {
     max-width: 1280px;
 }
