--- a/resources/sass/pilihan.scss
+++ b/resources/sass/pilihan.scss
@@ -20,6 +20,10 @@ a{
     margin-left: 4%;
 }
 
+#regisemp {
+    margin-left: 0 !important;
+}
+
 button{
     width: 120%;
     border: 1px solid #FE5E31;
