--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -41,7 +41,6 @@
 #drpdwn {
     border-radius: 20px;
     background-color: #439100 !important;
-    margin-left: 82%;
     margin-top: 3%;
 }
 
@@ -235,4 +234,73 @@
 
 #pills-tab {
     display: none;
+}
+
+.bsc {
+    width: 95%;
+    float: left;
+    margin-top: 2%;
+    padding: 30px;
+    border: 1px solid #FF8B6A;
+    border-radius: 20px;
+    span {
+        color: #FF8B6A;
+    }
+    .num {
+        margin-top: 25px;
+        .progress {
+            background-color: #525252;
+            .progress-bar {
+                background-color: #6CDD0B;
+            }
+        }
+    }
+    .base {
+        margin-top: 25px;
+        .progress {
+            background-color: #525252;
+            .progress-bar {
+                background-color: #4B9EF0;
+            }
+        }
+    }
+}
+
+.adv {
+    width: 95%;
+    float: left;
+    margin-top: 2%;
+    padding: 30px;
+    border: 1px solid #FF8B6A;
+    border-radius: 20px;
+    span {
+        color: #FF8B6A;
+    }
+    .algo {
+        margin-top: 25px;
+        .progress {
+            background-color: #525252;
+            .progress-bar {
+                background-color: #6CDD0B;
+            }
+        }
+    }
+    .stat {
+        margin-top: 25px;
+        .progress {
+            background-color: #525252;
+            .progress-bar {
+                background-color: #A5A5A5;
+            }
+        }
+    }
+    .ave {
+        margin-top: 35px;
+        .progress {
+            background-color: #525252;
+            .progress-bar {
+                background-color: #6CDD0B;
+            }
+        }
+    }
 }
